# ghc

./: .gitignore  .gitmodules  Makefile  README.md  aclocal.m4  android-install.sh  build-android-install.sh  config-params.txt  configure.ac  ghc.mk  settings.in
bindisttest/: ghc.mk
compiler/: HsVersions.h  ghc.cabal.in  ghc.mk
compiler/ghci/: LibFFI.hsc  Linker.hs
compiler/iface/: BinIface.hs  FlagChecker.hs
compiler/main/: DriverPipeline.hs  DynFlags.hs  Finder.hs  (+6 more)
distrib/: configure.ac.in
fixups/: builtin_rts.conf  genres.pl  gensymtable.pl  ghc.mk  packages  resources.c  resources.h  symbolLookup.c
ghc/: GhciMonad.hs  InteractiveStubs.hs  InteractiveUI.hs  Main.hs  fixup_bss_limits.pl  gen_bss_limits.sh  gen_main_closure_header.pl  ghc-bin.cxbxl.in  ghc-cross.wrapper  ghc-lib.cxbxl.in  ghc.mk  ghc.wrapper  hschooks.c  io.c  io.h  sampleio.txt
includes/: ghc.mk  ghcautoconf.h  ghcplatform.h
mk/: build-interactive-edition.mk  config.h.in  config.mk.in  platform-stage.mk  project.mk.in  stage-config.mk.in  tree.mk
rts/: Adjustor.c  Interpreter.c  Linker.c  OldARMAtomic.c  PosixSource.h  RtsStartup.c  Trace.h  ghc.mk  package.conf.in
rules/: build-dependencies.mk  build-package-data.mk  build-package-way.mk  build-prog.mk  c-suffix-rules.mk  cmm-suffix-rules.mk  distdir-opts.mk  distdir-way-opts.mk  hs-suffix-way-rules-srcdir.mk  link-all-way.mk  link-all.mk  manual-package-config.mk  shell-wrapper.mk
test/: qsort.hs
utils/ghc-pkg/: Main.hs  ghc-pkg.cabal  ghc.mk
wrapper-scripts/: arm-linux-androideabi-ld-wrap  gcc32  ld-wrapper  ld32
(+35 files in other folders)
