Name: ghc-pkg
-- XXX Version number
Version: 6.9
Copyright: XXX
License: BSD3
-- XXX License-File: LICENSE
Author: XXX
Maintainer: cvs-fptools@haskell.org
Synopsis: XXX
Description: XXX
Category: Development
build-type: Simple
cabal-version: >=1.10

Flag interactive
    Description: Build for use with interactive edition.
    Default: False
    Manual: True

Executable ghc-pkg
    Default-Language: Haskell2010
    Main-Is: Main.hs
    Other-Modules: Version
    Other-Extensions: CPP

    Build-Depends: base       >= 4   && < 5,
                   directory  >= 1   && < 1.3,
                   process    >= 1   && < 1.3,
                   containers,
                   filepath,
                   Cabal,
                   binary,
                   bin-package-db,
                   bytestring
    if !os(windows)
        Build-Depends: unix
    if !os(windows) && !flag(interactive)
        Build-Depends: terminfo
    if os(windows)
        c-sources: CRT_noglob.c
